--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.1.2",
     "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.4.1",
     "sweetalert": "^2.1.2",
     "swiper": "^8.0.7",
     "yup": "^0.32.11"
