--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.2",
+    "react-simple-star-rating": "^4.0.5",
     "react-slick": "^0.28.1",
     "react-splitter-layout": "^4.0.0",
     "react-transition-group": "^4.4.2",
