--- a/package.json
+++ b/package.json
@@ -26,17 +26,21 @@
     "framer-motion": "^6.2.8",
     "material-avatar": "^0.3.5",
     "next": "^12.1.0",
+    "nextjs-chat-engine": "^1.11.1",
     "primeflex": "^3.1.3",
     "primeicons": "^5.0.0",
     "primereact": "^7.2.1",
     "react": "^17.0.2",
+    "react-chat-engine": "^1.11.22",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-intersection-observer": "^8.34.0",
     "react-router-dom": "^6.2.2",
     "react-simple-star-rating": "^4.0.5",
     "react-slick": "^0.28.1",
     "react-splitter-layout": "^4.0.0",
     "react-transition-group": "^4.4.2",
+    "sass": "^1.50.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.1.2",
     "slick-carousel": "^1.8.1",
